feat: addd `no-select-on-click` functionality
• Introduced logic in both `admin.js` and `main.js` to disable text selection when elements with the `no-select-on-click` class are clicked, restoring selection on `mouseup`.
• Updated copyright and project information in `admin.css`, `admin.js`, and `main.js` headers.
• Added `.no-select` and caption to the CSS selector list for unselectable elements.

--- a/css/admin.css
+++ b/css/admin.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*!
- * CodeIgniter Skeleton - Admin CSS (https://github.com/bkader/skeleton)
- * Copyright 2024 Kader Bouyakoub (http://bit.ly/KaderGhb)
+ * Skeleton Back-End - Admin CSS (https://www.ianhub.net/)
+ * Copyright 2025 Kader Bouyakoub (https://github.com/bkader)
  */
 
 :root {
@@ -1690,10 +1690,12 @@ body.csk-clean .footer .skeleton-footer-logo {
 	padding-left: 1.25rem;
 }
 
+.no-select,
 .nav,
 .navbar,
 img,
 label,
+caption,
 .form-text,
 .form-label,
 .form-check-label,
