--- a/css/admin.css
+++ b/css/admin.css
@@ -1565,6 +1565,12 @@ body.csk-clean .footer .skeleton-footer-logo {
 	display: none !important;
 }
 
+.dz-details,
+.dz-error-mark,
+.dz-success-mark {
+	display: none;
+}
+
 .note-btn-group .note-btn {
 	font-size: var(--cs-font-size-h5);
 	padding: .25rem .5rem;
