--- a/css/admin.css
+++ b/css/admin.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * Skeleton Back-End - Admin CSS (https://www.ianhub.net/)
+ * CiSkeleton Back-End - Admin CSS (https://www.ianhub.net/)
  * Copyright 2025 Kader Bouyakoub (https://github.com/bkader)
  */
 
@@ -512,6 +512,8 @@ textarea {
 	color: var(--cs-color-white) !important;
 }
 
+.btn-primary:focus-visible,
+.btn-primary:focus-within,
 .btn-primary:hover {
 	background-color: var(--cs-color-primary-hover);
 	border-color: var(--cs-color-primary-border-hover);
@@ -537,6 +539,8 @@ textarea {
 	color: var(--cs-color-primary) !important;
 }
 
+.btn-outline-primary:focus-visible,
+.btn-outline-primary:focus-within,
 .btn-outline-primary:hover {
 	background-color: var(--cs-color-primary);
 	border-color: var(--cs-color-primary-border);
@@ -577,6 +581,8 @@ textarea {
 	color: var(--cs-color-white) !important;
 }
 
+.btn-info:focus-visible,
+.btn-info:focus-within,
 .btn-info:hover {
 	background-color: var(--cs-color-info-hover);
 	border-color: var(--cs-color-info-border-hover);
@@ -617,6 +623,8 @@ textarea {
 	color: var(--cs-color-white) !important;
 }
 
+.btn-blue:focus-visible,
+.btn-blue:focus-within,
 .btn-blue:hover {
 	background-color: var(--cs-color-blue-hover);
 	border-color: var(--cs-color-blue-border-hover);
@@ -657,6 +665,8 @@ textarea {
 	color: var(--cs-color-white) !important;
 }
 
+.btn-brown:focus-visible,
+.btn-brown:focus-within,
 .btn-brown:hover {
 	background-color: var(--cs-color-brown-hover);
 	border-color: var(--cs-color-brown-border-hover);
@@ -697,6 +707,8 @@ textarea {
 	color: var(--cs-color-default) !important;
 }
 
+.btn-gold:focus-visible,
+.btn-gold:focus-within,
 .btn-gold:hover {
 	background-color: var(--cs-color-gold-hover);
 	border-color: var(--cs-color-gold-border-hover);
@@ -740,6 +752,8 @@ textarea {
 }
 
 .btn-green:hover,
+.btn-success:focus-visible,
+.btn-success:focus-within,
 .btn-success:hover {
 	background-color: var(--cs-color-green-hover);
 	border-color: var(--cs-color-green-border-hover);
@@ -785,6 +799,8 @@ textarea {
 }
 
 .btn-olive:hover,
+.btn-donate:focus-visible,
+.btn-donate:focus-within,
 .btn-donate:hover {
 	background-color: var(--cs-color-olive-hover);
 	border-color: var(--cs-color-olive-border-hover);
@@ -827,6 +843,8 @@ textarea {
 	color: var(--cs-color-white) !important;
 }
 
+.btn-orange:focus-visible,
+.btn-orange:focus-within,
 .btn-orange:hover {
 	background-color: var(--cs-color-orange-hover);
 	border-color: var(--cs-color-orange-border-hover);
@@ -866,6 +884,8 @@ textarea {
 	color: var(--cs-color-white) !important;
 }
 
+.btn-pink:focus-visible,
+.btn-pink:focus-within,
 .btn-pink:hover {
 	background-color: var(--cs-color-pink-hover);
 	border-color: var(--cs-color-pink-border-hover);
@@ -905,6 +925,8 @@ textarea {
 	color: var(--cs-color-white) !important;
 }
 
+.btn-purple:focus-visible,
+.btn-purple:focus-within,
 .btn-purple:hover {
 	background-color: var(--cs-color-purple-hover);
 	border-color: var(--cs-color-purple-border-hover);
@@ -944,6 +966,8 @@ textarea {
 	color: var(--cs-color-white) !important;
 }
 
+.btn-teal:focus-visible,
+.btn-teal:focus-within,
 .btn-teal:hover {
 	background-color: var(--cs-color-teal-hover);
 	border-color: var(--cs-color-teal-border-hover);
@@ -983,6 +1007,8 @@ textarea {
 	color: var(--cs-color-white) !important;
 }
 
+.btn-violet:focus-visible,
+.btn-violet:focus-within,
 .btn-violet:hover {
 	background-color: var(--cs-color-violet-hover);
 	border-color: var(--cs-color-violet-border-hover);
@@ -1018,6 +1044,8 @@ textarea {
 	color: var(--cs-color-default) !important;
 }
 
+.btn-white:focus-visible,
+.btn-white:focus-within,
 .btn-white:hover {
 	background-color: var(--cs-color-white-hover);
 	border-color: var(--cs-color-white-border-hover);
@@ -1053,6 +1081,8 @@ textarea {
 	color: var(--cs-color-white) !important;
 }
 
+.btn-yellow:focus-visible,
+.btn-yellow:focus-within,
 .btn-yellow:hover {
 	background-color: var(--cs-color-yellow-hover);
 	border-color: var(--cs-color-yellow-border-hover);
@@ -1093,6 +1123,8 @@ textarea {
 	color: var(--bs-dark) !important;
 }
 
+.btn-default:focus-visible,
+.btn-default:focus-within,
 .btn-default:hover {
 	background-color: var(--cs-color-gray-hover);
 	border-color: var(--cs-color-gray-border-hover);
