--- a/css/admin.css
+++ b/css/admin.css
@@ -1834,3 +1834,30 @@ caption,
 		padding-right: .685rem;
 	}
 }
+
+.scroll-to-top {
+	position: fixed;
+	right: 1rem;
+	bottom: 3rem;
+	display: none;
+	width: 2.5rem;
+	height: 2.5rem;
+	text-align: center;
+	color: #fff;
+	background: rgba(52, 58, 64, 0.5);
+	line-height: 2.5rem;
+	z-index: 1035;
+	border-radius: .125rem;
+}
+
+.scroll-to-top:focus, .scroll-to-top:hover {
+	color: #fff;
+}
+
+.scroll-to-top:hover {
+	background: #343a40;
+}
+
+.scroll-to-top i {
+	font-weight: 800;
+}
