--- a/css/admin.css
+++ b/css/admin.css
@@ -1194,7 +1194,7 @@ textarea {
 
 table th {
 	text-transform: uppercase;
-	font-size: .85em;
+	font-size: var(--cs-font-size-h5);
 }
 
 table th>input[type="checkbox"],
@@ -1499,7 +1499,7 @@ table td>input[type="checkbox"] {
 
 .info-box h3 {
 	font-size: 2.375rem;
-	font-weight: 700;
+	font-weight: bold;
 	margin: 0;
 	padding: 0;
 	white-space: nowrap;
@@ -1510,7 +1510,7 @@ table td>input[type="checkbox"] {
 
 .info-box p {
 	font-size: .938rem;
-	font-size: .9375rem;
+	font-weight: 500;
 	z-index: 5;
 	text-shadow: .125rem .125rem rgba(0, 0, 0, .2);
 	margin: 0;
@@ -1773,6 +1773,12 @@ caption,
 	-moz-user-select: none !important;
 	-ms-user-select: none !important;
 	user-select: none !important;
+}
+
+.dropdown-item,
+.btn,
+.form-label {
+	font-weight: 500;
 }
 
 @media (max-width: 36rem) {
