feat: Added `subtle` and `subtler`
Also updated dashboard alerts, BG and border.

--- a/css/admin.css
+++ b/css/admin.css
@@ -13,6 +13,8 @@
 	--cs-color-primary-border-hover: #0e3c56;
 	--cs-color-primary-focus: #155a83;
 	--cs-color-primary-border-focus: #124a6e;
+	--cs-color-primary-subtle: #85a5bd;
+	--cs-color-primary-subtler: #d5e3ec;
 
 	/* Secondary */
 	--cs-color-secondary: #5c6770;
@@ -22,6 +24,8 @@
 	--cs-color-secondary-border-hover: #41494f;
 	--cs-color-secondary-focus: #66727c;
 	--cs-color-secondary-border-focus: #525b63;
+	--cs-color-secondary-subtle: #a1a9af;
+	--cs-color-secondary-subtler: #dbe0e3;
 
 	/* Success */
 	--cs-color-success: #2e8540;
@@ -31,6 +35,8 @@
 	--cs-color-success-border-hover: #215d2d;
 	--cs-color-success-focus: #339349;
 	--cs-color-success-border-focus: #29763a;
+	--cs-color-success-subtle: #7cba8d;
+	--cs-color-success-subtler: #cee6d3;
 
 	/* Info */
 	--cs-color-info: #2a7fa6;
@@ -40,6 +46,8 @@
 	--cs-color-info-border-hover: #1d5872;
 	--cs-color-info-focus: #2f8eb9;
 	--cs-color-info-border-focus: #257092;
+	--cs-color-info-subtle: #79b3cd;
+	--cs-color-info-subtler: #d6eaf2;
 
 	/* Warning */
 	--cs-color-warning: #e2a30b;
@@ -49,6 +57,8 @@
 	--cs-color-warning-border-hover: #9d6e07;
 	--cs-color-warning-focus: #f0b324;
 	--cs-color-warning-border-focus: #cb930a;
+	--cs-color-warning-subtle: #efc770;
+	--cs-color-warning-subtler: #fbeace;
 
 	/* Danger */
 	--cs-color-danger: #c23b22;
@@ -58,6 +68,8 @@
 	--cs-color-danger-border-hover: #842817;
 	--cs-color-danger-focus: #d04428;
 	--cs-color-danger-border-focus: #ad3520;
+	--cs-color-danger-subtle: #dd8876;
+	--cs-color-danger-subtler: #f2d4cf;
 
 	/* Blue */
 	--cs-color-blue: #2185d0;
@@ -348,6 +360,16 @@ textarea {
 	color: var(--cs-color-white);
 }
 
+.alert {
+	border-radius: .25rem;
+	padding: .5rem .625rem;
+}
+
+.alert-dismissible .btn-close {
+	padding: .625rem .78125rem;
+	font-size: .625rem;
+}
+
 .alert-critical {
 	color: #ffe8e6;
 	background-color: #db2828;
@@ -603,6 +625,10 @@ textarea {
 	color: var(--cs-color-white);
 }
 
+.bg-primary-subtle {
+	background-color: var(--cs-color-primary-subtler) !important;
+}
+
 .btn-primary {
 	background-color: var(--cs-color-primary);
 	border-color: var(--cs-color-primary-border);
@@ -662,6 +688,16 @@ textarea {
 	border-color: var(--cs-color-primary) !important;
 }
 
+.border-primary-subtle {
+	border-color: var(--cs-color-primary-subtle) !important;
+}
+
+.alert-primary {
+	color: var(--cs-color-primary-border-hover);
+	background-color: var(--cs-color-primary-subtler);
+	border-color: var(--cs-color-primary-subtle);
+}
+
 .text-secondary {
 	background-color: inherit;
 	color: var(--cs-color-secondary) !important;
@@ -676,6 +712,10 @@ textarea {
 	background-color: var(--cs-color-secondary);
 	border-color: var(--cs-color-secondary-border);
 	color: var(--cs-color-white) !important;
+}
+
+.bg-secondary-subtle {
+	background-color: var(--cs-color-secondary-subtler) !important;
 }
 
 .btn-secondary:focus-visible,
@@ -731,6 +771,16 @@ textarea {
 	border-color: var(--cs-color-secondary) !important;
 }
 
+.border-secondary-subtle {
+	border-color: var(--cs-color-secondary-subtle) !important;
+}
+
+.alert-secondary {
+	color: var(--cs-color-secondary-border-hover);
+	background-color: var(--cs-color-secondary-subtler);
+	border-color: var(--cs-color-secondary-subtle);
+}
+
 .text-success,
 .text-green {
 	background-color: inherit;
@@ -741,6 +791,11 @@ textarea {
 .bg-green {
 	background-color: var(--cs-color-success) !important;
 	color: var(--cs-color-white);
+}
+
+.bg-success-subtle,
+.bg-green-subtle {
+	background-color: var(--cs-color-success-subtler) !important;
 }
 
 .btn-success,
@@ -819,6 +874,18 @@ textarea {
 	border-color: var(--cs-color-success) !important;
 }
 
+.border-success-subtle,
+.border-green-subtle {
+	border-color: var(--cs-color-success-subtle) !important;
+}
+
+.alert-success,
+.alert-green {
+	color: var(--cs-color-success-border-hover);
+	background-color: var(--cs-color-success-subtler);
+	border-color: var(--cs-color-success-subtle);
+}
+
 .text-info {
 	background-color: inherit;
 	color: var(--cs-color-info) !important;
@@ -827,6 +894,10 @@ textarea {
 .bg-info {
 	background-color: var(--cs-color-info) !important;
 	color: var(--cs-color-white);
+}
+
+.bg-info-subtle {
+	background-color: var(--cs-color-info-subtler) !important;
 }
 
 .btn-info {
@@ -888,6 +959,16 @@ textarea {
 	border-color: var(--cs-color-info) !important;
 }
 
+.border-info-subtle {
+	border-color: var(--cs-color-info-subtle) !important;
+}
+
+.alert-info {
+	color: var(--cs-color-info-border-hover);
+	background-color: var(--cs-color-info-subtler);
+	border-color: var(--cs-color-info-subtle);
+}
+
 .text-warning {
 	background-color: inherit;
 	color: var(--cs-color-warning) !important;
@@ -896,6 +977,10 @@ textarea {
 .bg-warning {
 	background-color: var(--cs-color-warning) !important;
 	color: var(--cs-color-white);
+}
+
+.bg-warning-subtle {
+	background-color: var(--cs-color-warning-subtler) !important;
 }
 
 .btn-warning {
@@ -957,6 +1042,16 @@ textarea {
 	border-color: var(--cs-color-warning) !important;
 }
 
+.border-warning-subtle {
+	border-color: var(--cs-color-warning-subtle) !important;
+}
+
+.alert-warning {
+	color: var(--cs-color-warning-border-hover);
+	background-color: var(--cs-color-warning-subtler);
+	border-color: var(--cs-color-warning-subtle);
+}
+
 .text-danger {
 	background-color: inherit;
 	color: var(--cs-color-danger) !important;
@@ -965,6 +1060,10 @@ textarea {
 .bg-danger {
 	background-color: var(--cs-color-danger) !important;
 	color: var(--cs-color-white);
+}
+
+.bg-danger-subtle {
+	background-color: var(--cs-color-danger-subtler) !important;
 }
 
 .btn-danger {
@@ -1024,6 +1123,16 @@ textarea {
 
 .border-danger {
 	border-color: var(--cs-color-danger) !important;
+}
+
+.border-danger-subtle {
+	border-color: var(--cs-color-danger-subtle) !important;
+}
+
+.alert-danger {
+	color: var(--cs-color-danger-border-hover);
+	background-color: var(--cs-color-danger-subtler);
+	border-color: var(--cs-color-danger-subtle);
 }
 
 .text-blue {
