refactor: Change pagination css & scroll to top
Also bumped version from `1.3.9` to `1.3.10`

--- a/css/admin.css
+++ b/css/admin.css
@@ -341,8 +341,9 @@ textarea {
 }
 
 .pagination-sm .page-link {
-	padding: .25rem .5rem;
-	font-size: var(--cs-font-size-small);
+	padding: .5rem .625rem;
+	font-size: var(--cs-font-size-default);
+	font-weight: 500;
 	line-height: 1;
 }
 
