--- a/css/admin.css
+++ b/css/admin.css
@@ -402,6 +402,7 @@ textarea {
 	transform: scale(-1, 1);
 }
 
+.smaller,
 .text-small {
 	font-size: .685rem !important;
 }
@@ -2265,6 +2266,15 @@ table td>input[type="checkbox"] {
 .card.card-file .btn {
 	border-top-left-radius: 0;
 	border-top-right-radius: 0;
+}
+
+.zoom-img {
+	z-index: 1056;
+}
+
+.zoom-img-wrap {
+	position: fixed;
+	z-index: 1056;
 }
 
 .progress {
