Fix(admin,css): Fixed dropdown header font size
Also bumped version to `1.3.19`

--- a/css/admin.css
+++ b/css/admin.css
@@ -2090,9 +2090,10 @@ table td>input[type="checkbox"] {
 }
 
 .dropdown-divider {
-	margin: .312rem 0;
+	margin-block: .3125rem;
 }
 
+.dropdown-header,
 .dropdown-item {
 	font-size: var(--cs-font-size-default);
 	padding: .188rem 1rem;
