--- a/css/admin.css
+++ b/css/admin.css
@@ -182,12 +182,13 @@
 	--cs-font-family-default: 'Roboto', Tahoma, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 	--cs-font-size-default: .8125rem;
 	--cs-font-size-small: .75rem;
+	--cs-font-size-smaller: .688rem;
 	--cs-font-size-h1: 1.438rem;
-	--cs-font-size-h2: var(--cs-font-size-h1);
-	--cs-font-size-h3: 1.438rem;
-	--cs-font-size-h4: var(--cs-font-size-default);
-	--cs-font-size-h5: .688rem;
-	--cs-font-size-h6: .562rem;
+	--cs-font-size-h2: 1.25rem;
+	--cs-font-size-h3: 1.087rem;
+	--cs-font-size-h4: .945rem;
+	--cs-font-size-h5: .822rem;
+	--cs-font-size-h6: .715rem;
 }
 
 /* Arabic and Persian */
@@ -273,34 +274,40 @@ h6 {
 	font-weight: 400;
 }
 
-h1 {
+h1,
+.h1 {
 	font-size: var(--cs-font-size-h1);
-	line-height: 1.8125rem;
+	line-height: 1.1;
 }
 
-h2 {
+h2,
+.h2 {
 	font-size: var(--cs-font-size-h2);
-	line-height: 1.8125rem;
+	line-height: 1.1;
 }
 
-h3 {
+h3,
+.h3 {
 	font-size: var(--cs-font-size-h3);
-	line-height: 1.125rem;
+	line-height: 1.2;
 }
 
-h4 {
+h4,
+.h4 {
 	font-size: var(--cs-font-size-h4);
-	line-height: 1.125rem;
+	line-height: 1.2;
 }
 
-h5 {
+h5,
+.h5 {
 	font-size: var(--cs-font-size-h5);
-	line-height: 1.125rem;
+	line-height: 1.2;
 }
 
-h6 {
+h6,
+.h6 {
 	font-size: var(--cs-font-size-h6);
-	line-height: 1.125rem;
+	line-height: 1.2;
 }
 
 a:not(.btn, :hover, :focus, :active),
@@ -450,7 +457,7 @@ textarea {
 
 .smaller,
 .text-small {
-	font-size: .685rem !important;
+	font-size: var(--cs-font-size-smaller) !important;
 }
 
 .overflow-initial {
@@ -481,7 +488,7 @@ textarea {
 	inline-size: 10% !important;
 }
 
-.w-125 {
+.w-13 {
 	inline-size: 12.5% !important;
 }
 
@@ -489,7 +496,7 @@ textarea {
 	inline-size: 15% !important;
 }
 
-.w-175 {
+.w-18 {
 	inline-size: 17.5% !important;
 }
 
@@ -1988,7 +1995,7 @@ textarea {
 
 table th {
 	text-transform: uppercase;
-	font-size: var(--cs-font-size-h5);
+	font-size: var(--cs-font-size-smaller);
 }
 
 table th>input[type="checkbox"],
@@ -2158,8 +2165,8 @@ table td>input[type="checkbox"] {
 }
 
 .header .page-title {
-	font-size: 1.25rem;
-	line-height: 2.25rem;
+	font-size: var(--cs-font-size-h2);
+	line-height: 1.75;
 	color: var(--bs-white);
 	display: inline-block;
 	margin: 0;
@@ -2462,7 +2469,7 @@ body.csk-clean .footer .skeleton-footer-logo {
 }
 
 .note-btn-group .note-btn {
-	font-size: var(--cs-font-size-h5);
+	font-size: var(--cs-font-size-smaller);
 	padding: .25rem .5rem;
 }
 
