feat(lang): Added missing localizations for jQuery validate and Summernote

--- a/css/admin.css
+++ b/css/admin.css
@@ -397,6 +397,7 @@ button.disabled {
 }
 
 .pagination-sm .page-link {
+	padding: .5rem .625rem;
 	font-size: var(--cs-font-size-default);
 	font-weight: 500;
 }
